# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.conf  error.html  file  leak_file  main.cpp  test.txt
cgi_scripts/: test.py
configs/: default.conf  error_page.conf  limits_body_size.conf  method_head.conf  multiple_server_port.conf  multiple_server_server_name.conf
files/: error_page.html  index.html  paint.html
includes/: CGI.hpp  Client.hpp  FileParser.hpp  HTTPRequest.hpp  HTTPResponse.hpp  Location.hpp  VirtualServer.hpp  WebServer.hpp
srcs/: CGI.cpp  CGI.hpp  Client.cpp  Client.hpp  Config.cpp  Config.hpp  FileParser.cpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  Location.cpp  Location.hpp  ParseConfig.hpp  Server.cpp  Server.hpp  VirtualServer.cpp  VirtualServer.hpp  WebServer.cpp  WebServer.hpp  WebServer_generateResponse.cpp  default.conf  main.cpp  main1.cpp  test.cpp
test/: file  leak_file
tester/: mac.conf
utils_function/: ft_add.cpp  ft_add_bytes.cpp  ft_atoi.cpp  ft_compare.cpp  ft_current_data.cpp  ft_erase.cpp  ft_find.cpp  ft_memcpy.cpp  ft_memjoin.cpp  ft_parse_spaces.cpp  ft_read_line.cpp  ft_split.cpp  ft_strchr.cpp  ft_strdup.cpp  ft_strjoin.cpp  ft_strlen.cpp  ft_strstr.cpp  ft_strtrim.cpp  ft_substr.cpp  utils.hpp
utils_function/get_next_line/: get_next_line.cpp  get_next_line.hpp  get_next_line_utils.cpp
